Fixed background color clipping on wide screen resolutions

--- a/themes/sass/style.sass
+++ b/themes/sass/style.sass
@@ -11,6 +11,7 @@ html
     background-color: $dark-grey
     font-family: $font
     font-size: 16px
+    min-height: 100%
 
 body
     font-size: $body-size
